--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,7 +19,7 @@ jobs:
   
   deploy:
     needs: build
-    runs-on: self-hosted
+    runs-on: Linux
     steps:
       - name: Pull image from docker hub
         run: docker pull anderson383/shoppingfy-front:latest
